--- a/_includes/share-section.html
+++ b/_includes/share-section.html
@@ -1,7 +1,12 @@
 <div class="share-section">
   <h1 class="share-title">Liked what you read?</h1>
   <div class="share-buttons">
-    
+
+    {% capture urlfb %}https://www.facebook.com/dialog/feed?app_id={{ site.fb_app_id }}&link={{ site.url }}{{ page.url }}&name={{ page.title }}&caption={{ site.url-pretty }}&redirect_uri={{ site.url }}{{ page.url }}?message=Thanks for sharing!{% endcapture %}
+    {% if page.fb-img %}
+      {% capture urlfb %}{{ urlfb }}&picture={{ page.fb-img }}{% endcapture %}
+    {% endif %}
+
     {% capture urltwitter %}https://twitter.com/intent/tweet?url={{ site.url }}{{ page.url }}&via=_gyani_{% endcapture %}
     {% if page.tags contains 'python' %}
       {% assign maxlength = 94 %}
@@ -10,10 +15,7 @@
       {% assign maxlength = 102 %}
     {% endif %}
     {% capture urltwitter %}{{ urltwitter }}&text={{ page.title | truncate: maxlength }}{% endcapture %}
-    
-    <a href="{{ urlmessage }}" data-ga-event=1 data-ga-category="share" data-ga-action="message" data-ga-label="{{ page.url }}">
-      Let me know
-    </a>
+
     <a href="{{ urlfb }}" data-ga-event=1 data-ga-category="share" data-ga-action="facebook" data-ga-label="{{ page.url }}">
       Share on Facebook
     </a>
