--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -70,6 +70,17 @@
           </li>
           {% endif %}
 
+          {% if site.author.tumblr and site.footer-links-active.tumblr %}
+          <li>
+            <a href="https:{{ site.author.tumblr}}.tumblr.com" title="Tumblr">
+              <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-tumblr fa-stack-1x fa-inverse"></i>
+              </span>
+            </a>
+          </li>
+          {% endif %}
+
           {% if site.footer-links-active.rss %}
           <li>
             <a href="{{ '/feed.xml' | prepend: site.baseurl }}" title="Subscribe to my blog">
