--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,6 +34,12 @@ layout: base
         {% include share-section.html %}
       {% endif %}
 
+      {% if page.comments %}
+        <div class="disqus-comments">
+          {% include disqus.html %}
+        </div>
+      {% endif %}
+
     </div>
   </div>
 </div>
