Corrected tumblr link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -72,7 +72,7 @@
 
           {% if site.author.tumblr and site.footer-links-active.tumblr %}
           <li>
-            <a href="https:{{ site.author.tumblr}}.tumblr.com" title="Tumblr">
+            <a href="https://{{ site.author.tumblr}}.tumblr.com" title="Tumblr">
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-tumblr fa-stack-1x fa-inverse"></i>
@@ -89,7 +89,7 @@
                 <i class="fa fa-rss fa-stack-1x fa-inverse"></i>
               </span>
             </a>
-          </li>		
+          </li>
           {% endif %}
 
         </ul>
