--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,8 +8,8 @@
           <li>
             <a href="mailto:{{ site.author.email }}?subject=Hello from {{ site.url-pretty }}" title="Email me">
               <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
+                <i class="fa-solid fa-circle fa-stack-2x"></i>
+                <i class="fa-solid fa-envelope fa-stack-1x fa-inverse"></i>
               </span>
             </a>
           </li>
@@ -19,8 +19,8 @@
           <li>
             <a href="https://github.com/{{ site.author.github }}" title="GitHub">
               <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+                <i class="fa-solid fa-circle fa-stack-2x"></i>
+                <i class="fa-brands fa-github fa-stack-1x fa-inverse"></i>
               </span>
             </a>
           </li>
@@ -30,8 +30,8 @@
           <li>
             <a href="https://twitter.com/{{ site.author.twitter }}" title="Twitter">
               <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+                <i class="fa-solid fa-circle fa-stack-2x"></i>
+                <i class="fa-brands fa-x-twitter fa-stack-1x fa-inverse"></i>
               </span>
             </a>
           </li>
@@ -41,8 +41,8 @@
           <li>
             <a href="https://www.facebook.com/{{ site.author.facebook }}" title="Facebook">
               <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+                <i class="fa-solid fa-circle fa-stack-2x"></i>
+                <i class="fa-brands fa-facebook fa-stack-1x fa-inverse"></i>
               </span>
             </a>
           </li>
@@ -52,8 +52,8 @@
           <li>
             <a href="https://stackoverflow.com/{{ site.author.stackoverflow }}" title="StackOverflow">
               <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-stack-overflow fa-stack-1x fa-inverse"></i>
+                <i class="fa-solid fa-circle fa-stack-2x"></i>
+                <i class="fa-brands fa-stack-overflow fa-stack-1x fa-inverse"></i>
               </span>
             </a>
           </li>
@@ -63,8 +63,8 @@
           <li>
             <a href="https://linkedin.com/{{ site.author.linkedin }}" title="LinkedIn">
               <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+                <i class="fa-solid fa-circle fa-stack-2x"></i>
+                <i class="fa-brands fa-linkedin fa-stack-1x fa-inverse"></i>
               </span>
             </a>
           </li>
@@ -74,8 +74,8 @@
           <li>
             <a href="https://{{ site.author.tumblr}}.tumblr.com" title="Tumblr">
               <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-tumblr fa-stack-1x fa-inverse"></i>
+                <i class="fa-solid fa-circle fa-stack-2x"></i>
+                <i class="fa-brands fa-tumblr fa-stack-1x fa-inverse"></i>
               </span>
             </a>
           </li>
@@ -85,8 +85,8 @@
           <li>
             <a href="{{ '/feed.xml' | prepend: site.baseurl }}" title="Subscribe to my blog">
               <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-rss fa-stack-1x fa-inverse"></i>
+                <i class="fa-solid fa-circle fa-stack-2x"></i>
+                <i class="fa-solid fa-rss fa-stack-1x fa-inverse"></i>
               </span>
             </a>
           </li>
@@ -106,7 +106,7 @@
         </p>
         <p class="theme-by text-muted">
           Theme by
-          <a href="http://deanattali.com/beautiful-jekyll/">beautiful-jekyll</a>
+          <a href="https://deanattali.com/beautiful-jekyll/">beautiful-jekyll</a>
         </p>
       </div>
     </div>
