--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -21,7 +21,7 @@
 		{% if site.nav-search %}
 		<li>
 		  <a href="{{ site.baseurl }}/{{ site.nav-search }}" class="nav-search-link" title="Search">
-		    <span class="fa fa-search nav-search-icon"></span>
+		    <span class="fa-solid fa-magnifying-glass nav-search-icon"></span>
 			<span class="nav-search-text">Search</span>
 		  </a>
 		</li>
